# hesse_curve

./: CMakeLists.txt  README.md  main.c
CMake/: Findgmp.cmake
